[gd_scene load_steps=3 format=3 uid="uid://bad8dhbabuq7t"]

[ext_resource type="Script" path="res://src/Player/selected_stats.gd" id="1_ltmyg"]
[ext_resource type="Theme" uid="uid://c1o0775c62lgb" path="res://src/Player/PopupPanel.tres" id="2_tc5gy"]

[node name="SelectedStats" type="CanvasLayer"]
layer = 2
visible = false
script = ExtResource("1_ltmyg")

[node name="Background" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.743
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.280029
offset_bottom = -174.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1.00684, 1)
theme = ExtResource("2_tc5gy")

[node name="Contents" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = -3.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="Background/Contents"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "BubbleGum Star"
horizontal_alignment = 1

[node name="cleanlinessBox" type="HSplitContainer" parent="Background/Contents"]
layout_mode = 2

[node name="CleanText" type="Label" parent="Background/Contents/cleanlinessBox"]
layout_mode = 2
text = "Cleanlieness:"

[node name="Clean" type="Label" parent="Background/Contents/cleanlinessBox"]
layout_mode = 2
text = "clean/maxClean"
horizontal_alignment = 2

[node name="foodBox" type="HSplitContainer" parent="Background/Contents"]
layout_mode = 2

[node name="FoodText" type="Label" parent="Background/Contents/foodBox"]
layout_mode = 2
text = "Food:"

[node name="Food" type="Label" parent="Background/Contents/foodBox"]
layout_mode = 2
text = "food/maxFood"
horizontal_alignment = 2

[node name="stressBox" type="HSplitContainer" parent="Background/Contents"]
layout_mode = 2

[node name="StressText" type="Label" parent="Background/Contents/stressBox"]
layout_mode = 2
text = "Stress:"

[node name="Stress" type="Label" parent="Background/Contents/stressBox"]
layout_mode = 2
text = "stress/maxStress"
horizontal_alignment = 2

[node name="productionBox" type="HSplitContainer" parent="Background/Contents"]
layout_mode = 2

[node name="ProductionText" type="Label" parent="Background/Contents/productionBox"]
layout_mode = 2
text = "Next Production:"

[node name="Production" type="Label" parent="Background/Contents/productionBox"]
layout_mode = 2
text = "max"
horizontal_alignment = 2

[node name="ProduceBox" type="HSplitContainer" parent="Background/Contents"]
layout_mode = 2

[node name="ProduceText" type="Label" parent="Background/Contents/ProduceBox"]
layout_mode = 2
text = "Produces:"

[node name="Produce" type="Label" parent="Background/Contents/ProduceBox"]
layout_mode = 2
text = "resourcename"
horizontal_alignment = 2

[node name="valueBox" type="HSplitContainer" parent="Background/Contents"]
layout_mode = 2

[node name="ValueText" type="Label" parent="Background/Contents/valueBox"]
layout_mode = 2
text = "Value: "

[node name="Value" type="Label" parent="Background/Contents/valueBox"]
layout_mode = 2
text = "value"
horizontal_alignment = 2

[node name="MoveButton" type="Button" parent="Background/Contents"]
layout_mode = 2
text = "Move"

[node name="Delete" type="Button" parent="Background/Contents"]
layout_mode = 2
text = "Remove"

[connection signal="pressed" from="Background/Contents/MoveButton" to="." method="_on_move_button_pressed"]
[connection signal="pressed" from="Background/Contents/Delete" to="." method="_on_delete_pressed"]
